--- a/doc/doc technique.tex
+++ b/doc/doc technique.tex
@@ -11,6 +11,7 @@
 \author{Malika NEDJAR}
 \title{document technique}
 \begin{document}
+\maketitle
 
 \section{ Introduction}
 
@@ -126,7 +127,7 @@ Dans ma configuration j’utilise deux types d’entrées :
     \item Des entrées de type syslog qui agissent comme un serveur syslog qui écoute.
 \end{itemize}
 
-Pour la partie “input” du serveur, on crée le fichier \textbf{input.conf} ou j'ai choisis les entrées de type syslog qui agissent comme un serveur syslog qui écoute sur le port 5000 et pour celà, j'ai configuré \textbf{rsyslog} pour qu'il envois tous les logs ver le port 5000 en créant le fichier \textbf{/etc/rsyslog.d/logstash.conf}:
+Pour la partie "input" du serveur, on crée le fichier \textbf{input.conf} ou j'ai choisis les entrées de type syslog qui agissent comme un serveur syslog qui écoute sur le port 5000 et pour celà, j'ai configuré \textbf{rsyslog} pour qu'il envois tous les logs ver le port 5000 en créant le fichier \textbf{/etc/rsyslog.d/logstash.conf}:
 \begin{verbatim}
 $template LOGSTASH,"<%PRI%>%TIMESTAMP% %HOSTNAME% %syslogtag%%msg%"
 $ActionForwardDefaultTemplate LOGSTASH
@@ -153,72 +154,69 @@ Pour la partie “input” du serveur, on crée le fichier \textbf{filter.conf}.
 
 \begin{verbatim}
 filter {
+
 if [type] == "syslog" {
         grok {
-        	match => { "message" => "<%{POSINT:syslog_pri}>%
-        	{SYSLOGTIMESTAMP:timestamp} 
-        	%{SYSLOGHOST:logsource} %{DATA:program}(?:\
-        	[%{POSINT:syslog_pid}\])?: %{GREEDYDATA:message}" }
-        	
-        	overwrite => [ "%{[logsource]}" ]			
-        	add_field => [ "received_at", "%{@timestamp}" ]
-        	add_field => [ "received_from","%{logsource}" ]
+                match => { "message" => "<%{POSINT:syslog_pri}>%{SYSLOGTIMESTAMP:timestamp} %{SYSLOGHOST:logsource} %{DATA:program}(?:\[%{$
+                overwrite => [ "%{[logsource]}" ]
+                add_field => [ "received_at", "%{@timestamp}" ]
+                add_field => [ "received_from","%{host}" ]
         }
         syslog_pri { }
-
+        
         date {
-        	 match => [ "timestamp", "MMM  d HH:mm:ss", "MMM dd HH:mm:ss" ]
+                locale => "fr"
+                match => [ "timestamp", "MMM  d HH:mm:ss", "MMM dd HH:mm:ss" ]
+        }
+                mutate {
+                        replace=> ["received_at", "%{timestamp}"]
+                        convert => [ "received_at" , "string" ]
+                        gsub => [
+                                # replace all : with -
+                                "received_at", ":", "."
+                        ]
+                }
+}
+
+if [program] == "pperso-access" or [program] == "apache2" {
+        grok {
+                # logs HTTPS
+                match => { "message" => "%{COMBINEDAPACHELOG}  %{IPORHOST:host} %{GREEDYDATA:ssl_protocol} %{GREEDYDATA:ssl_cipher}" }
+                # logs HTTP
+                match => { "message" => "%{COMBINEDAPACHELOG}  %{IPORHOST:host}" }
+        }
+        mutate {
+                replace => ["type","apache"]
         }
 }
-if [program] == "pperso-access" {
-	grok {
-      	 # logs HTTPS 
-      	 match => { "message" => "%{COMBINEDAPACHELOG}  %{IPORHOST:host} %
-      	 {GREEDYDATA:ssl_protocol} %{GREEDYDATA:ssl_cipher}"}
-       	 # logs HTTP
-       	 match => { "message" => "%{COMBINEDAPACHELOG}  %{IPORHOST:host}" }
-    }
-	mutate {
-        replace => ["type","apache"]
-       	}
-
-	useragent { 
-      	prefix => "agent." 
-      	source => "agent" 
-    	}
+if [type] == "apache" {
+        useragent {
+                prefix => "agent."
+                source => "agent"
+        }
 # Add geolocalization attributes based on ip.
-	geoip { 
-      		source => "clientip" 
-      		target => "geoip" 
-      		database => "/usr/share/GeoIP/GeoLiteCity.dat" 
-      		add_field => [ "[geoip][coordinates]", "%{[geoip][longitude]}" ] 
-      		add_field => [ "[geoip][coordinates]", "%{[geoip][latitude]}"  ] 
-    	} 
-	mutate {
-      		convert => [ "[geoip][coordinates]", "float" ]
-      		gsub => [
-        		"referrer", "^\"", "",
-        		"referrer", "\"$", "",
-        		"agent", "^\"", "",
-        		"agent", "\"$", ""
-      		]
-	} 
+        geoip {
+                source => "clientip"
+                target => "geoip"
+                database => "/usr/share/GeoIP/GeoLiteCity.dat"
+                add_field => [ "[geoip][coordinates]", "%{[geoip][longitude]}" ]
+                add_field => [ "[geoip][coordinates]", "%{[geoip][latitude]}"  ]
+        }
+        mutate {
+                convert => [ "[geoip][coordinates]", "float" ]
+                gsub => [
+                        "referrer", "^\"", "",
+                        "referrer", "\"$", "",
+                        "agent", "^\"", "",
+                        "agent", "\"$", ""
+                ]
+        }
 }
 #On reforme le message avec les infos sélectionnées
-#  	mutate { 
-#     		replace => ["host","%{logsource}"]
-# 		replace => [ "host", "%{hostname}" ]
-#  	}
+#       mutate {
+#               replace => ["host","%{logsource}"]
+#       }
 }
-
-
-
-
-
-
-
-
-
 \end{verbatim}
 
 Pour la partie “output” du serveur, on crée le fichier \textbf{output.conf}.
@@ -227,7 +225,7 @@ output {
   elasticsearch {
     protocol => "http"
     flush_size => '100'
-    host => 'loghost-ng'
+    host => 'loghost-ng'\maketitle
     index => 'logstash-%{+YYYY.MM.dd}'
     port => '9200'
   }
@@ -240,7 +238,7 @@ output {
 
 \subsection{Installation de Kibana}
 Kibana est une interface web permettant de rechercher des informations stockées par Logstash dans ElasticSearch.
-
+Techniquement, Kibana est une application web développée en Javascript pur et donc déployable sur un simple serveur HTTP du type Apache HTTP Server.
 \begin{verbatim}
 $cd /opt
 $wget https://download.elasticsearch.org/kibana/kibana/kibana-4.0.1-linux-x64.tar.gz
@@ -256,25 +254,82 @@ $sudo service kibana4 start
 
 $systemctl enable kibana
 $systemctl start kibana
+
+
+
 \end{verbatim}
 
-apres l'installation on passe à la configuration de kinana, en éditant 
-sur le navigateur 
-En effectuant des requêtes qui permettent de retrouver parmi tous les logs les connexions (les authentifications) voici quelques requêtes:
-La requête pour visualiser tous les connexions:
+après l'installation on passe à la configuration de kinana, on lance le navigateur par l'adresse :  \textit{http://loghost-ng:5601}
+
+
+L'interface Kibana est divisé en quatre sections principales :
+
+\begin{itemize}
+	\item Discover
+	
+    \item Visualize
+    
+    \item Dashboard
+    
+    \item Settings
+    
+\end{itemize}
+
+\newpage
+
+\textbf{Discover : }Présente toutes les données de votre index comme une table des documents.\\
+
+\includegraphics[scale=0.3]{discover.png} \\
+
+\textbf{Visualize:} Cette page est l'endroit où on peut créer, modifier et consulter nos propres visualisations personnalisées . Il existe plusieurs types de visualisations.\\
+
+\includegraphics[scale=0.3]{visualize.png} \\
+
+\textbf{Dashboard:} Une page ou on peut créer , modifier et afficher nos propres tableaux de bord personnalisés . Avec un tableau de bord , nous pouvons combiner plusieurs visualisations sur une seule page, puis les filtrer en fournissant une requête de recherche ou en sélectionnant des filtres en cliquant sur les éléments de la visualisation. Les tableaux de bord sont utiles lorsque nous souhaitons obtenir un aperçu de nos journaux , et établir des corrélations entre les différentes visualisations et les journaux.\\
+
+\includegraphics[scale=0.3]{dashboard.png} \\
+
+\textbf{Settings:} Cette page nous permet de modifier une variété de choses comme valeurs par défaut ou des modèles d'index.\\
+
+\includegraphics[scale=0.3]{settings.png} \\
+
+En effectuant des requêtes qui permettent de retrouver parmi tous les logs les
+informations qu'on voulait dans une barre de recherche:\\
+
+\includegraphics[scale=0.5]{Discover-New-Search.png} \\
+
+\newpage
+
+\begin{itemize}
+ \item La requête pour visualiser toutes les connexions(les authentifications):
+
 \begin{verbatim}
 "(kdm:session)" AND "session opened for user"
-ou
-"session opened for user" AND kdm NOT "session opened for user nagios" NOT
- "session opened for user root" NOT "session opened for user fberarde" NOT
-  "session opened for user netdb" NOT "session opened for user www-data"
 \end{verbatim}
-La requête pour visualiser tous les connexions de la salle 001 \& 004:
+\item La requête pour visualiser tous les connexions de la salle 001 \& 004:
+
 \begin{verbatim}
 "(kdm:session)" AND "session opened for user" AND 10.0.4.*
 \end{verbatim}
-La requête pour visualiser tous les connexions de la salle 101:
+
+\item La requête pour visualiser tous les connexions de la salle 101:
+
 \begin{verbatim}
 "(kdm:session)" AND "session opened for user" AND 10.0.101.*
 \end{verbatim}
+
+\item La requête pour visualiser tous les connexions x2go:
+
+
+\item La requête pour visualiser tous les connexions ssh:
+
+\begin{verbatim}
+"pam_unix(sshd:session): session opened for user" NOT fberarde NOT root
+\end{verbatim}
+
+\end{itemize}
+\section{Création des vues et des dashboards Kibana} 
+pour plus d'information d'utilisation de kibana 4 consulter: 
+
+\textit{https://www.elastic.co/blog/kibana-4-video-tutorials-part-1}
 \end{document}
